--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "repository": "git@github.com:curder/nginx-study.git",
   "author": "curder <q.curder@gmail.com>",
   "license": "MIT",
+  "type": "module",
+  "engines": {
+    "node": ">= 18.0"
+  },
   "scripts": {
     "docs:dev": "vitepress dev docs",
     "docs:build": "vitepress build docs",
     "docs:preview": "vitepress preview docs"
   },
   "devDependencies": {
-    "vitepress": "^1.0.0-alpha.51"
+    "vitepress": "^1.0.0"
   }
 }
